Collapse Size Fix?

--- a/css/main.scss
+++ b/css/main.scss
@@ -147,7 +147,7 @@ th {
   }
 
   #active{
-    width: 100%;
+    width: $nav-width;
   }
 
   .navbar-toggle{
